eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-demo
  namespace: eks-demo
  labels:
    app: eks-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eks-demo
  strategy: {}
  template:
    metadata:
      labels:
        app: eks-demo
    spec:
      containers:
      - name: eks-demo
        image: <INSERT URI HERE>
        ports:
          - containerPort: 80
        resources: {}
