eks/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: eks-demo
  namespace: eks-demo
spec:
  selector:
    app: eks-demo
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
